--- a/introduction/numpy_5th_sem.ipynb
+++ b/introduction/numpy_5th_sem.ipynb
@@ -4,8 +4,11 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "hLMgGIF-xSjj"
+      ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMgHhp4363OXban65pe3zTM",
+      "authorship_tag": "ABX9TyPRjN7sR0dfyhJk7mn3Oud8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +82,7 @@
         "id": "Hpw_RKGAsrXM",
         "outputId": "3cd1d27f-765e-4995-d883-25b1abcfacd7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -106,7 +109,7 @@
         "id": "bWsDX1i2tk4N",
         "outputId": "b91438b3-099a-4fb9-e802-8db14106ee5a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -133,7 +136,7 @@
         "id": "lvSikIpPtqRt",
         "outputId": "c55f7a83-3195-4f34-aef6-169a969d0680"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +162,7 @@
         "id": "H1ya5hd5vIco",
         "outputId": "b3f72d5a-cbe8-4284-aa24-3767e4a76b63"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -185,7 +188,7 @@
         "id": "SkkqIZFxv28d",
         "outputId": "2b87a71f-a9ef-4daf-e50f-1f660c5e058d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +215,7 @@
         "id": "JNCp1PoawBwQ",
         "outputId": "97a6b7dc-7583-4bca-a5fa-394d8f447722"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +257,7 @@
         "id": "VM07dIC2x6lg",
         "outputId": "4ed6acbc-ed42-4ad0-d2dd-93c3b79e229b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +285,7 @@
         "id": "M_lGwxCRyLRY",
         "outputId": "a81384b1-e113-41e1-ef8c-ab50f86d3bea"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +313,7 @@
         "id": "dJCzAPtxyfzD",
         "outputId": "8c5b4f72-6206-4161-bb95-8295f367ee18"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +343,7 @@
         "id": "WEX2oJjIz-MT",
         "outputId": "f0822472-4c79-461b-e0c5-6336d11aa26f"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +372,7 @@
         "id": "3N7UrNCv0heE",
         "outputId": "a201ce7f-109a-4cee-cc42-87c687e04c90"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +401,7 @@
         "id": "Lsy9gQAr1BD6",
         "outputId": "7c89cc61-c056-40cd-9e67-571d5622b18e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +429,7 @@
         "id": "VKwSEDXM1jgs",
         "outputId": "a8fcd305-883c-4d49-b3e8-a71ac8177671"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +488,7 @@
         "id": "5hUWeuVx3Ycd",
         "outputId": "dc51cb5a-6518-4be6-aebc-607e14e40e86"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,7 +515,7 @@
         "id": "FzzOjdKL3h0a",
         "outputId": "91902db9-0b41-407a-afda-4171f980336f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +541,7 @@
         "id": "QIEvTa51377o",
         "outputId": "ee80276c-da25-488b-8d06-6099c40ce539"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +571,7 @@
         "id": "FUC2Qzq55OBn",
         "outputId": "62fa5c5c-f716-4cf3-d544-28fd6bb46179"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,6 +586,288 @@
           },
           "metadata": {},
           "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "koPjRGLmF2Kr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Element wise operation on entire arrays element by element"
+      ],
+      "metadata": {
+        "id": "plYiOgy5F3TQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a = np.arange(5)\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KYkarfLIGFBw",
+        "outputId": "20f2bc39-6a02-424e-c603-372eb663c46b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b=(10+(a*2))\n",
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wW2hCy3jGZWq",
+        "outputId": "25d62fe1-0313-4bba-bd22-9f6a7fa78e76"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 12, 14, 16, 18])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Comparison operations\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LQ8PgHMGGhhX",
+        "outputId": "9209fce6-9899-41f0-e207-3cd20aca19d8"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a >=2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z4ctObvBHbje",
+        "outputId": "3969ef4a-4e83-47f1-eb98-009c6ea1e3fa"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False, False,  True,  True,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a>b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RtS3AlBnHe2m",
+        "outputId": "879b9eac-d4ce-4490-a410-2bda19876653"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False, False, False, False, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# summarizing of the data\n",
+        "# Numpy provides functions for summarizing array data\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fBYkpG8tHj5j",
+        "outputId": "475c73a1-0932-4889-f2cb-90376c555683"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.std()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JArlAtaAIzPJ",
+        "outputId": "7f911916-3af3-4294-9cab-027964d99212"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4142135623730951"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.min()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tEIlr5rEI5mb",
+        "outputId": "92f62b3a-e9e6-4ad4-c70e-32cd32999285"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oizE01iII9sU",
+        "outputId": "407d7a8d-0fdf-4958-f26c-010f235dd29a"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oRPMQuUBJAGj",
+        "outputId": "3bd97de4-6f2d-40c2-9540-8542350bd693"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
